--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,20 +8,226 @@
     <meta name="description" content="Pokedéx feita por Pipe">
     <title>Pokédex do Pipe</title>
 </head>
+
 <body>
     <main>
         <div class="pokedex">
             <div class="cartoes-pokemon">
-                <div class="cartao-topo">
-                    <div class="detalhes">
-                        <h2 class="nome">Pikachu</h2>
-                        <span>#001</span>
+                <div class="cartao-pokemon">
+                    <div class="cartao-topo">
+                        <div class="detalhes">
+                            <h2 class="nome">Pikachu</h2>
+                            <span>#001</span>
+                        </div>
+                        <span class="tipo">elétrico</span>
+
+                        <div class="cartao-imagem">
+                            <img src="src/imagens/pikachu.png" alt="Imagem do pikachu">
+                        </div>
                     </div>
-                    <span> class</span>
+
+                    <div class="cartao-informacoes">
+                        <div class="status">
+                            <h3>Status</h3>
+                            <ul>
+                                <li>HP: 300</li>
+                                <li>Ataque: 600</li>
+                                <li>Defesa: 500</li>
+                                <li>Velocidade: 300</li>
+                                <li>Total: 1700</li>
+                            </ul>
+                        </div>
+                        <div class="habilidades">
+                            <h3>Habilidades</h3>
+
+                            <ul>
+                                <li>Choque do trovão</li>
+                                <li>Cabeçada</li>
+                            </ul>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="cartao-pokemon">
+                    <div class="cartao-topo">
+                        <div class="detalhes">
+                            <h2 class="nome">Bulbassauro</h2>
+                            <span>#002</span>
+                        </div>
+                        <span class="tipo">Planta</span>
+
+                        <div class="cartao-imagem">
+                            <img src="src/imagens/bulbasaur.png" alt="Imagem do Bulbassauro">
+                        </div>
+                    </div>
+
+                    <div class="cartao-informacoes">
+                        <div class="status">
+                            <h3>Status</h3>
+                            <ul>
+                                <li>HP: 400</li>
+                                <li>Ataque: 500</li>
+                                <li>Defesa: 600</li>
+                                <li>Velocidade: 200</li>
+                                <li>Total: 1700</li>
+                            </ul>
+                        </div>
+                        <div class="habilidades">
+                            <h3>Habilidades</h3>
+
+                            <ul>
+                                <li>Chicote de vinha</li>
+                                <li>Folha navalha</li>
+                            </ul>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="cartao-pokemon">
+                    <div class="cartao-topo">
+                        <div class="detalhes">
+                            <h2 class="nome">Charmander</h2>
+                            <span>#003</span>
+                        </div>
+                        <span class="tipo">Fogo</span>
+
+                        <div class="cartao-imagem">
+                            <img src="src/imagens/charmander.png" alt="Imagem do Charmander">
+                        </div>
+                    </div>
+
+                    <div class="cartao-informacoes">
+                        <div class="status">
+                            <h3>Status</h3>
+                            <ul>
+                                <li>HP: 300</li>
+                                <li>Ataque: 600</li>
+                                <li>Defesa: 500</li>
+                                <li>Velocidade: 300</li>
+                                <li>Total: 1700</li>
+                            </ul>
+                        </div>
+                        <div class="habilidades">
+                            <h3>Habilidades</h3>
+
+                            <ul>
+                                <li>Brasa</li>
+                                <li>Arranhão</li>
+                            </ul>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="cartao-pokemon">
+                    <div class="cartao-topo">
+                        <div class="detalhes">
+                            <h2 class="nome">Gyarados</h2>
+                            <span>#004</span>
+                        </div>
+                        <span class="tipo">Água/Voador</span>
+
+                        <div class="cartao-imagem">
+                            <img src="src/imagens/gyarados.png" alt="Imagem do Gyarados">
+                        </div>
+                    </div>
+
+                    <div class="cartao-informacoes">
+                        <div class="status">
+                            <h3>Status</h3>
+                            <ul>
+                                <li>HP: 300</li>
+                                <li>Ataque: 600</li>
+                                <li>Defesa: 500</li>
+                                <li>Velocidade: 300</li>
+                                <li>Total: 1700</li>
+                            </ul>
+                        </div>
+                        <div class="habilidades">
+                            <h3>Habilidades</h3>
+
+                            <ul>
+                                <li>Fúria do dragão</li>
+                                <li>Mordida</li>
+                            </ul>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="cartao-pokemon">
+                    <div class="cartao-topo">
+                        <div class="detalhes">
+                            <h2 class="nome">Gengar</h2>
+                            <span>#005</span>
+                        </div>
+                        <span class="tipo">Fantasma/Venenoso</span>
+
+                        <div class="cartao-imagem">
+                            <img src="src/imagens/gengar.png" alt="Imagem do Gengar">
+                        </div>
+                    </div>
+
+                    <div class="cartao-informacoes">
+                        <div class="status">
+                            <h3>Status</h3>
+                            <ul>
+                                <li>HP: 300</li>
+                                <li>Ataque: 600</li>
+                                <li>Defesa: 500</li>
+                                <li>Velocidade: 300</li>
+                                <li>Total: 1700</li>
+                            </ul>
+                        </div>
+                        <div class="habilidades">
+                            <h3>Habilidades</h3>
+
+                            <ul>
+                                <li>Bola de sombra</li>
+                                <li>Lambida</li>
+                            </ul>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="cartao-pokemon">
+                    <div class="cartao-topo">
+                        <div class="detalhes">
+                            <h2 class="nome">Dragonite</h2>
+                            <span>#006</span>
+                        </div>
+                        <span class="tipo">Dragão/Voador</span>
+
+                        <div class="cartao-imagem">
+                            <img src="src/imagens/dragonite.png" alt="Imagem do Dragonite">
+                        </div>
+                    </div>
+
+                    <div class="cartao-informacoes">
+                        <div class="status">
+                            <h3>Status</h3>
+                            <ul>
+                                <li>HP: 300</li>
+                                <li>Ataque: 600</li>
+                                <li>Defesa: 500</li>
+                                <li>Velocidade: 300</li>
+                                <li>Total: 1700</li>
+                            </ul>
+                        </div>
+                        <div class="habilidades">
+                            <h3>Habilidades</h3>
+
+                            <ul>
+                                <li>Hyper Raio</li>
+                                <li>Voar</li>
+                            </ul>
+                        </div>
+                    </div>
+
                 </div>
             </div>
-        </div>
 
+            <nav class="listagem"></nav>
+        </div>
     </main>
 </body>
+
 </html>
