Terminado o html da aula

--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
                         <div class="status">
                             <h3>Status</h3>
                             <ul>
-                                <li>HP: 300</li>
-                                <li>Ataque: 600</li>
+                                <li>HP: 200</li>
+                                <li>Ataque: 700</li>
                                 <li>Defesa: 500</li>
                                 <li>Velocidade: 300</li>
                                 <li>Total: 1700</li>
@@ -135,11 +135,11 @@
                         <div class="status">
                             <h3>Status</h3>
                             <ul>
-                                <li>HP: 300</li>
-                                <li>Ataque: 600</li>
-                                <li>Defesa: 500</li>
-                                <li>Velocidade: 300</li>
-                                <li>Total: 1700</li>
+                                <li>HP: 400</li>
+                                <li>Ataque: 500</li>
+                                <li>Defesa: 600</li>
+                                <li>Velocidade: 600</li>
+                                <li>Total: 2100</li>
                             </ul>
                         </div>
                         <div class="habilidades">
@@ -170,10 +170,10 @@
                         <div class="status">
                             <h3>Status</h3>
                             <ul>
-                                <li>HP: 300</li>
-                                <li>Ataque: 600</li>
-                                <li>Defesa: 500</li>
-                                <li>Velocidade: 300</li>
+                                <li>HP: 200</li>
+                                <li>Ataque: 700</li>
+                                <li>Defesa: 300</li>
+                                <li>Velocidade: 500</li>
                                 <li>Total: 1700</li>
                             </ul>
                         </div>
@@ -205,11 +205,11 @@
                         <div class="status">
                             <h3>Status</h3>
                             <ul>
-                                <li>HP: 300</li>
-                                <li>Ataque: 600</li>
-                                <li>Defesa: 500</li>
-                                <li>Velocidade: 300</li>
-                                <li>Total: 1700</li>
+                                <li>HP: 500</li>
+                                <li>Ataque: 700</li>
+                                <li>Defesa: 700</li>
+                                <li>Velocidade: 200</li>
+                                <li>Total: 2100</li>
                             </ul>
                         </div>
                         <div class="habilidades">
@@ -225,7 +225,34 @@
                 </div>
             </div>
 
-            <nav class="listagem"></nav>
+            <nav class="listagem">
+                <ul>
+                    <li class="pokemon">
+                        <img src="src/imagens/cabeca-pikachu.png" alt="cabeça do pikachu">0
+                        <span>Pikachu</span>
+                    </li>
+                    <li class="pokemon">
+                        <img src="src/imagens/cabeca-bulbasaur.png" alt="cabeça do bulbassauro">0
+                        <span>Bulbassauro</span>
+                    </li>
+                    <li class="pokemon">
+                        <img src="src/imagens/cabeca-charmander.png" alt="cabeça do charmander">0
+                        <span>Charmander</span>
+                    </li>
+                    <li class="pokemon">
+                        <img src="src/imagens/cabeca-gyarados.png" alt="cabeça do Gyarados">0
+                        <span>Gyarados</span>
+                    </li>
+                    <li class="pokemon">
+                        <img src="src/imagens/cabeca-gengar.png" alt="cabeça do Gengar">0
+                        <span>Gengar</span>
+                    </li>
+                    <li class="pokemon">
+                        <img src="src/imagens/cabeca-dragonite.png" alt="cabeça do Dragonite">0
+                        <span>Dragonite</span>
+                    </li>
+                </ul>
+            </nav>
         </div>
     </main>
 </body>
