--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <meta name="description" content="Pokedéx feita por Pipe">
     <title>Pokédex do Pipe</title>
+    <link rel="stylesheet" href="src/css/global.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Autour+One&family=Kumbh+Sans:wght@400;700&family=Manrope:wght@800&family=MedievalSharp&family=Poppins:wght@300;500;800&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -228,27 +232,27 @@
             <nav class="listagem">
                 <ul>
                     <li class="pokemon">
-                        <img src="src/imagens/cabeca-pikachu.png" alt="cabeça do pikachu">0
+                        <img src="src/imagens/cabeca-pikachu.png" alt="cabeça do pikachu">
                         <span>Pikachu</span>
                     </li>
                     <li class="pokemon">
-                        <img src="src/imagens/cabeca-bulbasaur.png" alt="cabeça do bulbassauro">0
+                        <img src="src/imagens/cabeca-bulbasaur.png" alt="cabeça do bulbassauro">
                         <span>Bulbassauro</span>
                     </li>
                     <li class="pokemon">
-                        <img src="src/imagens/cabeca-charmander.png" alt="cabeça do charmander">0
+                        <img src="src/imagens/cabeca-charmander.png" alt="cabeça do charmander">
                         <span>Charmander</span>
                     </li>
                     <li class="pokemon">
-                        <img src="src/imagens/cabeca-gyarados.png" alt="cabeça do Gyarados">0
+                        <img src="src/imagens/cabeca-gyarados.png" alt="cabeça do Gyarados">
                         <span>Gyarados</span>
                     </li>
                     <li class="pokemon">
-                        <img src="src/imagens/cabeca-gengar.png" alt="cabeça do Gengar">0
+                        <img src="src/imagens/cabeca-gengar.png" alt="cabeça do Gengar">
                         <span>Gengar</span>
                     </li>
                     <li class="pokemon">
-                        <img src="src/imagens/cabeca-dragonite.png" alt="cabeça do Dragonite">0
+                        <img src="src/imagens/cabeca-dragonite.png" alt="cabeça do Dragonite">
                         <span>Dragonite</span>
                     </li>
                 </ul>
