--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <meta name="description" content="Pokedéx feita por Pipe">
     <title>Pokédex do Pipe</title>
+    <link rel="stylesheet" href="src/css/reset.css">
     <link rel="stylesheet" href="src/css/global.css">
+    <link rel="stylesheet" href="src/css/cartao.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Autour+One&family=Kumbh+Sans:wght@400;700&family=Manrope:wght@800&family=MedievalSharp&family=Poppins:wght@300;500;800&display=swap" rel="stylesheet">
@@ -17,7 +20,7 @@
     <main>
         <div class="pokedex">
             <div class="cartoes-pokemon">
-                <div class="cartao-pokemon">
+                <div class="cartao-pokemon aberto">
                     <div class="cartao-topo">
                         <div class="detalhes">
                             <h2 class="nome">Pikachu</h2>
