--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="src/css/reset.css">
     <link rel="stylesheet" href="src/css/global.css">
     <link rel="stylesheet" href="src/css/cartao.css">
-
+    <link rel="stylesheet" href="src/css/listagem.css">
+    <link rel="stylesheet" href="src/css/responsivo.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Autour+One&family=Kumbh+Sans:wght@400;700&family=Manrope:wght@800&family=MedievalSharp&family=Poppins:wght@300;500;800&display=swap" rel="stylesheet">
@@ -20,7 +21,7 @@
     <main>
         <div class="pokedex">
             <div class="cartoes-pokemon">
-                <div class="cartao-pokemon aberto">
+                <div class="cartao-pokemon aberto tipo-eletrico">
                     <div class="cartao-topo">
                         <div class="detalhes">
                             <h2 class="nome">Pikachu</h2>
@@ -55,7 +56,7 @@
                     </div>
 
                 </div>
-                <div class="cartao-pokemon">
+                <div class="cartao-pokemon tipo-planta">
                     <div class="cartao-topo">
                         <div class="detalhes">
                             <h2 class="nome">Bulbassauro</h2>
@@ -90,7 +91,7 @@
                     </div>
 
                 </div>
-                <div class="cartao-pokemon">
+                <div class="cartao-pokemon tipo-fogo">
                     <div class="cartao-topo">
                         <div class="detalhes">
                             <h2 class="nome">Charmander</h2>
@@ -125,7 +126,7 @@
                     </div>
 
                 </div>
-                <div class="cartao-pokemon">
+                <div class="cartao-pokemon tipo-agua">
                     <div class="cartao-topo">
                         <div class="detalhes">
                             <h2 class="nome">Gyarados</h2>
@@ -160,7 +161,7 @@
                     </div>
 
                 </div>
-                <div class="cartao-pokemon">
+                <div class="cartao-pokemon tipo-fantasma">
                     <div class="cartao-topo">
                         <div class="detalhes">
                             <h2 class="nome">Gengar</h2>
@@ -195,7 +196,7 @@
                     </div>
 
                 </div>
-                <div class="cartao-pokemon">
+                <div class="cartao-pokemon tipo-dragao">
                     <div class="cartao-topo">
                         <div class="detalhes">
                             <h2 class="nome">Dragonite</h2>
@@ -234,7 +235,7 @@
 
             <nav class="listagem">
                 <ul>
-                    <li class="pokemon">
+                    <li class="pokemon ativo">
                         <img src="src/imagens/cabeca-pikachu.png" alt="cabeça do pikachu">
                         <span>Pikachu</span>
                     </li>
